# BookFlow_API

./: .env.example  README.md  main.py  pyproject.toml
migrations/: env.py
migrations/versions/: 53caf6997e38_create_book_table.py  66e19980838a_create_user_table.py  d747c5005033_create_book_table.py
src/: main.py
src/auth/: deps.py  models.py  routers.py  schemas.py  services.py  utils.py
src/books/: books_data.py  deps.py  models.py  routers.py  schemas.py  services.py
src/db/: config.py  models.py  session.py
